# file-system-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxygen  README.md  debug.h  main.cpp
include/: cli_view.h  cmd_dispatcher.h  io.h  processor.h
include/alias/: alias_handler.h  alias_registry.h  ialias_handler.h  ialias_registry.h
include/cmdlets/: icmdlet.h
include/cmdlets/dir/: ls.h  mkdir.h
include/cmdlets/dir_n_file/: cp.h  mv.h  rm.h  stat.h
include/cmdlets/file/: cat.h  touch.h  write.h
include/cmdlets/file_system/: du.h  loadfs.h  savefs.h
include/cmdlets/group/: groupmod.h
include/cmdlets/rights/: chmod.h  chown.h  geteff.h  getfacl.h
include/cmdlets/user/: login.h  logout.h  useradd.h  usermod.h
include/containers/: kernel_container.h  object_factories_container.h  persistence_container.h  system_container.h
include/domain/: types.h
include/domain/entity/: group.h  user.h
include/domain/objects/: acl.h  dan_map.h  directory.h  directory_structure.h  file_object.h  inmem_file.h  reg_file.h
include/domain/tables/: group_table.h  itable.h  user_table.h
include/dto/fs/: atomic_disk_usage_dto.h  disk_usage_dto.h
include/dto/objects/: dir_content_dto.h  file_content_dto.h  stat_file_dto.h
include/dto/rights/: e_rights_dto.h  file_acl_dto.h
include/factories/: id_gen.h
include/factories/entity/: group_fac.h  user_fac.h
include/factories/init/: app_services_fac.h  cmdlet_fac.h  domain_services_fac.h  kernel_fac.h  kernel_fac_validator.h
include/factories/objects/: acl_fac.h  file_object_fac.h  inmem_fac.h
include/factories/persistence/: file_object_mapper_fac.h  persistence_fac.h
include/mappers/acl/: acl_mapper.h
include/mappers/entity/: group_mapper.h  user_mapper.h
include/mappers/file_system/: file_system_mapper.h
include/mappers/objects/: directory_mapper.h  file_object_mapper.h  metadata_mapper.h  regfile_mapper.h
include/mt/: thread_pool.h
include/requests/cmdlet/: req_cmdlet.h
include/requests/group/: req_groupmod.h
include/requests/user/: req_useradd.h  req_usermod.h
include/result_cmdlets/: disk_usage_result.h  empty_result.h  icmdlet_result.h
include/result_cmdlets/objects/: dir_content_result.h  file_content_result.h  stat_file_result.h
include/result_cmdlets/rights/: e_rights_result.h  (+1 more)
include/serializer/: iserializer.h  yaml_serializer.h
src/: CMakeLists.txt  cli_view.cpp  cmd_dispatcher.cpp  io.cpp  processor.cpp
src/alias/: CMakeLists.txt  alias_handler.cpp  alias_registry.cpp
src/cmdlets/: CMakeLists.txt
src/cmdlets/dir/: ls.cpp  mkdir.cpp
src/cmdlets/dir_n_file/: cp.cpp  mv.cpp  rm.cpp  stat.cpp
src/cmdlets/file/: cat.cpp  touch.cpp  write.cpp
src/cmdlets/file_system/: du.cpp  loadfs.cpp  savefs.cpp
src/cmdlets/group/: groupmod.cpp
src/cmdlets/rights/: chmod.cpp  chown.cpp  geteff.cpp  getfacl.cpp
src/cmdlets/user/: login.cpp  logout.cpp  useradd.cpp  usermod.cpp
src/containers/: CMakeLists.txt  persistence_container.cpp  system_container.cpp
src/domain/objects/: CMakeLists.txt  acl.cpp  directory.cpp  directory_structure.cpp  inmem_file.cpp  reg_file.cpp
src/domain/tables/: CMakeLists.txt  group_table.cpp  user_table.cpp
src/dto/: CMakeLists.txt  file_acl_dto.cpp  stat_file_dto.cpp
src/factories/: CMakeLists.txt  acl_fac.cpp  file_object_fac.cpp  group_fac.cpp  inmem_fac.cpp  user_fac.cpp
src/factories/init/: app_services_fac.cpp  cmdlet_fac.cpp  domain_services_fac.cpp  kernel_fac.cpp  kernel_fac_validator.cpp
src/factories/persistence/: persistence_fac.cpp
src/mappers/: CMakeLists.txt
src/mappers/acl/: acl_mapper.cpp
src/mappers/entity/: group_mapper.cpp  user_mapper.cpp
src/mappers/file_system/: file_system_mapper.cpp
src/mappers/objects/: directory_mapper.cpp  file_object_mapper.cpp  metadata_mapper.cpp  regfile_mapper.cpp
src/mappers/objects/adapters/: directory_adapter_mapper.cpp  regfile_adapter_mapper.cpp
src/mt/: CMakeLists.txt  thread_pool.cpp
src/serializer/: CMakeLists.txt  yaml_serializer.cpp
src/services/application/: CMakeLists.txt  app_group_service.cpp  app_rights_service.cpp  app_user_service.cpp
src/services/application/fs/: app_filesystem_persistance_service.cpp  app_filesystem_service.cpp
src/services/application/objects/: app_both_dirnfile_service.cpp  app_dir_service.cpp  app_file_service.cpp
src/services/domain/: CMakeLists.txt  group_service.cpp  kernel_service.cpp  rights_service.cpp  user_service.cpp
src/services/domain/objects/: dir_service.cpp  file_service.cpp
src/services/session/: session_service.cpp
src/services/shell/: path_pattern_resolver.cpp
tests/: CMakeLists.txt  fs_for_test_cmdlets.cpp  fs_for_test_cmdlets.h
tests/alias/: test_alias_handler.cpp  test_alias_registry.cpp
tests/cmdlets/: test_cmdlets_basic.cpp
tests/containers/: test_persistence_container.cpp
tests/domain/: test_container_template.cpp  test_directory.cpp
tests/domain/entity/: test_group.cpp  test_user.cpp
tests/domain/objects/: test_acl.cpp  test_directory_structure.cpp  test_inmem_file.cpp  test_reg_file.cpp
tests/domain/tables/: test_group_table.cpp  test_user_table.cpp
tests/dto/: test_file_acl_dto.cpp  test_stat_file_dto.cpp
tests/dto/fs/: test_disk_usage_dto.cpp
tests/factories/entity/: test_group_fac.cpp  test_user_fac.cpp
tests/factories/init/: test_app_services_fac.cpp  test_domain_services_fac.cpp  test_kernel_fac.cpp
tests/factories/objects/: test_file_object_fac.cpp  test_inmem_fac.cpp
tests/factories/persistence/: test_persistence_fac.cpp
tests/mappers/acl/: test_acl_mapper.cpp
tests/mappers/entity/: test_group_mapper.cpp  test_user_mapper.cpp
tests/mt/: test_thread_pool.cpp
tests/serializer/: test_yaml_serializer.cpp
tests/services/application/: test_app_dir_service.cpp  test_app_dirnfile_service.cpp  test_app_file_service.cpp  test_app_group_service.cpp  test_app_rights_service.cpp  test_app_user_service.cpp
tests/services/domain/: test_dir_service.cpp  test_file_service.cpp  test_group_service.cpp  test_kernel_service.cpp  test_rights_service.cpp  test_user_service.cpp
(+30 files in other folders)
